kubernetes/21-ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdr-ingestion
  namespace: xdr-platform
  labels:
    app: xdr-ingestion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xdr-ingestion
  template:
    metadata:
      labels:
        app: xdr-ingestion
    spec:
      containers:
      - name: ingestion
        image: docker.io/lbranc14/xdr-ingestion:latest  # À remplacer
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
